# chip8-emu

./: .gitignore  .gitmodules  CMakeLists.txt
resources/: unlit.frag  unlit.vert
src/: asset.cpp  asset.h  chip8.cpp  chip8.h  main.cpp  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  shader.cpp  texture.cpp  texture.h  window.cpp  window.h
